--- a/.github/workflows/bundled_gems.yml
+++ b/.github/workflows/bundled_gems.yml
@@ -108,6 +108,7 @@ jobs:
         if: ${{ steps.diff.outputs.gems }}
 
       - name: Commit
+        id: commit
         run: |
           git pull --ff-only origin ${GITHUB_REF#refs/heads/}
           message="Update bundled gems list"
@@ -116,18 +117,22 @@ jobs:
           else
             git commit --message="${message} as of ${TODAY}"
           fi
-          git push origin ${GITHUB_REF#refs/heads/}
         env:
           TODAY: ${{ steps.bundled_gems.outputs.latest_date || env.TODAY }}
           EMAIL: svn-admin@ruby-lang.org
           GIT_AUTHOR_NAME: git
           GIT_COMMITTER_NAME: git
           gems: ${{ steps.diff.outputs.gems }}
+        if: ${{ steps.diff.outputs.update }}
+
+      - name: Push
+        run: |
+          git push origin ${GITHUB_REF#refs/heads/}
         if: >-
           ${{
           github.repository == 'ruby/ruby' &&
           !startsWith(github.event_name, 'pull') &&
-          steps.diff.outputs.update
+          steps.commit.outcome == 'success'
           }}
 
       - uses: ./.github/actions/slack
