Revert "Visual Studio 2022 17.13.x couldn't build miniruby.exe. It prevents other PRs."
This reverts commit 56f46e544876e7a96b1196ed8a89de578e0307fc.

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -31,10 +31,10 @@ jobs:
             test_task: check
           - vs: 2019
             test_task: check
-          - vs: 2019
+          - vs: 2022
+            test_task: check
+          - vs: 2022
             test_task: test-bundled-gems
-          # - vs: 2022
-          #   test_task: check
       fail-fast: false
 
     runs-on: windows-${{ matrix.vs < 2022 && '2019' || matrix.vs }}
