--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -25,23 +25,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: 2019
-            vc: 2015
-            vcvars: '10.0.14393.0 -vcvars_ver=14.0' # The oldest Windows 10 SDK w/ VC++ 2015 toolset (v140)
-            test_task: check
-          - os: 2019
-            vc: 2019
-            test_task: check
-          - os: 2022
-            vc: 2019
-            vcvars: '10.0.22621.0 -vcvars_ver=14.2' # The defautl Windows 11 SDK and toolset are broken at windows-2022
-            test_task: check
           - os: 11-arm
             test_task: check
-          - os: 2022
-            vc: 2019
-            vcvars: '10.0.22621.0 -vcvars_ver=14.2'
-            test_task: test-bundled-gems
       fail-fast: false
 
     runs-on: windows-${{ matrix.os < 2022 && '2019' || matrix.os }}
@@ -135,6 +120,7 @@ jobs:
         shell: pwsh
 
       - run: |
+          for %I in (git.exe) do echo %~$PATH:I
           git config --global --add safe.directory %cd%
           git config --global --get-all safe.directory
           git rev-parse HEAD
