--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -33,6 +33,9 @@ jobs:
             vc: 2019
             vcvars: '10.0.22621.0 -vcvars_ver=14.2'
             test_task: check
+          - os: 2025
+            vc: 2022
+            test_task: check
           - os: 11-arm
             test_task: 'btest test-basic test-tool' # check and test-spec are broken yet.
             target: arm64
