--- a/win32/Makefile.sub
+++ b/win32/Makefile.sub
@@ -570,6 +570,10 @@ ABI_VERSION_HDR = $(hdrdir)/ruby/internal/abi.h
 
 !include $(srcdir)/common.mk
 
+!if "$(CROSS_COMPILING)" != "yes"
+$(arch)-fake.rb: miniruby$(EXEEXT)
+!endif
+
 !ifdef SCRIPTPROGRAMS
 !else if [echo>scriptbin.mk SCRIPTPROGRAMS = \]
 !else if [for %I in ($(srcdir:/=\)\bin\*) do @echo>>scriptbin.mk %~nI.exe \]
