--- a/win32/Makefile.sub
+++ b/win32/Makefile.sub
@@ -26,7 +26,8 @@ MFLAGS=-l
 ! else
 !   include baseruby.mk
 ! endif
-! if [del baseruby.mk]
+! if !exist(baseruby.mk)
+! else if [del baseruby.mk]
 ! endif
 !else if "$(BASERUBY)" == "no" || [($(BASERUBY) -eexit) > nul 2> nul]
 BASERUBY =
