--- a/win32/Makefile.sub
+++ b/win32/Makefile.sub
@@ -1503,6 +1503,9 @@ rubyspec-capiext: $(RUBYSPEC_CAPIEXT_EXTS)
 
 exts: rubyspec-capiext
 
+yes-post-install-check:
+	$(DESTDIR:/=\)$(exec_prefix:/=\)\bin\$(PROGRAM) $(srcdir)/tool/post-install.rb
+
 yesterday:
 	for /f "usebackq" %H in \
 	    (`$(GIT) -C $(srcdir) log -1 "--before=00:00+0900" "--format=%H"`) do \
