--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -116,7 +116,7 @@ jobs:
         run: make -j4
 
       - name: make install
-        run: make DESTDIR=../install install-nodoc
+        run: make -j1 DESTDIR=../install install-nodoc
 
       - name: Set up Launchable
         uses: ./.github/actions/launchable/setup
