--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -176,6 +176,9 @@ jobs:
 
       - run: nmake
 
+      - name: nmake install
+        run: nmake DESTDIR=../install install-nodoc
+
       - name: Set up Launchable
         uses: ./.github/actions/launchable/setup
         with:
