--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -32,10 +32,8 @@ jobs:
             configure_args: '--with-gcc=gcc-14'
           - test_task: check
             os: macos-14
-            configure_args: '--with-jemalloc --with-opt-dir=$(brew --prefix jemalloc)'
-          - test_task: check
-            os: macos-14
-            configure_args: '--with-gmp'
+            configure_args: '--with-jemalloc'
+            corelibs: jemalloc
           - test_task: test-all
             test_opts: --repeat-count=2
             os: macos-14
@@ -72,6 +70,10 @@ jobs:
 
       - name: Install libraries
         uses: ./.github/actions/setup/macos
+        with:
+          corelibs: ${{ matrix.corelibs }}
+          extlibs: ${{ matrix.extlibs }}
+          extopts: ${{ matrix.extopts }}
 
       - uses: ./.github/actions/setup/directories
         with:
