--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -67,6 +67,9 @@ jobs:
       - uses: ./.github/actions/setup/ubuntu
         with:
           arch: ${{ matrix.arch }}
+          corelibs: ${{ matrix.corelibs }}
+          extlibs: ${{ matrix.extlibs }}
+          extopts: ${{ matrix.extopts }}
 
       - uses: ruby/setup-ruby@a4effe49ee8ee5b8b5091268c473a4628afb5651 # v1.245.0
         with:
