--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -119,15 +119,30 @@ jobs:
 
         # vcpkg built-in cache is not working now
       - name: Restore vcpkg artifact
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+        id: restore-vcpkg
+        uses: actions/cache/restore@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
-          path: src\vcpkg_installed
+          path: src/vcpkg_installed
           key: windows-${{ matrix.os }}-vcpkg-${{ hashFiles('src/vcpkg.json') }}
 
       - name: Install libraries with vcpkg
+        id: install-vcpkg
         run: |
+          echo on
+          for /f %%I in ('uutils date +%%s') do set beg=%%I
           vcpkg install --vcpkg-root=C:\Users\runneradmin\scoop\apps\vcpkg\current
+          for /f %%I in ('uutils date +%%s') do set end=%%I
+          set /a t=end-beg
+          echo elapsed=%t% >> %GITHUB_OUTPUT%
         working-directory: src
+
+        # forcibly overwrite the cache after rebuild took longer than 3 minutes.
+      - name: Save vcpkg artifact
+        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+        with:
+          path: src/vcpkg_installed
+          key: ${{ steps.restore-vcpkg.outputs.cache-primary-key }}
+        if: ${{ steps.install-vcpkg.outputs.elapsed > 180 }}
 
       # TODO: We should use `../src` instead of `D:/a/ruby/ruby/src`
       - name: Configure
