Fix around `depend` files

--- a/configure.ac
+++ b/configure.ac
@@ -4658,6 +4658,9 @@ AS_IF([test ! -f "$srcdir/revision.h"], [
     ])
 ])
 
+depends=`sed -n 's/^!include //p' ${srcdir}/common.mk`
+AC_SUBST(depends)
+
 AS_IF([test x"$firstmf" != x], [
     AC_CONFIG_FILES($firstmf:$firsttmpl, [], [firstmf="$firstmf" firsttmpl="$firsttmpl"])
 ])
@@ -4685,10 +4688,9 @@ AC_CONFIG_FILES(Makefile:template/Makefile.in, [
         done
 	sed '/^MISSING/s/\$U\././g;/^VCS *=/s#@VCS@#'"$VCS"'#;/^VCSUP *=/s#@VCSUP@#'"$VCSUP"'#' Makefile
 	echo; test x"$EXEEXT" = x || echo 'miniruby: miniruby$(EXEEXT)'
-	depends=`grep '^!include' ${srcdir}/common.mk | sed 's:^.* :$(srcdir)/:'`
 	AS_IF([test "$gnumake" != yes], [
-	    echo ['$(MKFILES): $(srcdir)/common.mk'${depends:+" $depends"}]
-	    sed ['s/{\$([^(){}]*)[^{}]*}//g'] ${srcdir}/common.mk `echo "$depends" | sed 's|\$(srcdir)|'"$(srcdir)|g"`
+	    echo ['$(MKFILES): $(srcdir)/common.mk']
+	    sed ['s/{\$([^(){}]*)[^{}]*}//g;/^!include /d'] ${srcdir}/common.mk `echo "$depends" | sed 's|\$(srcdir)|'"${srcdir}|g"`
             AS_IF([test "$YJIT_SUPPORT" = yes], [
                 cat ${srcdir}/yjit/not_gmake.mk
                 echo ['$(MKFILES): ${srcdir}/yjit/not_gmake.mk']
