--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -35,6 +35,7 @@ AUTOCONF = autoconf
 CONFIGURE = @CONFIGURE@
 @SET_MAKE@
 MKFILES = @MAKEFILES@
+depends = @depends@
 BASERUBY = @BASERUBY@
 HAVE_BASERUBY = @HAVE_BASERUBY@
 TEST_RUNNABLE = @TEST_RUNNABLE@
@@ -86,6 +87,7 @@ CC_VERSION = @CC_VERSION@
 OUTFLAG = @OUTFLAG@$(empty)
 COUTFLAG = @COUTFLAG@$(empty)
 CPPOUTFLAG = >
+CSRCFLAG =
 ARCH_FLAG = @ARCH_FLAG@
 CFLAGS_NO_ARCH = @CFLAGS@
 CFLAGS = $(CFLAGS_NO_ARCH) $(ARCH_FLAG)
@@ -396,8 +398,8 @@ $(MKFILES): config.status $(srcdir)/version.h $(ABI_VERSION_HDR)
 		$(MAKE) -f conftest.mk | grep '^AUTO_REMAKE$$' >/dev/null 2>&1 || \
 		{ echo "$@ updated, restart."; exit 1; }
 
-uncommon.mk: $(srcdir)/common.mk
-		sed -e 's/{\$$([^(){}]*)[^{}]*}//g' -e 's/^!/-/' $< > $@
+uncommon.mk: $(srcdir)/common.mk $(depends)
+		sed -e 's/{\$$([^(){}]*)[^{}]*}//g' -e '/^!/d' $(srcdir)/common.mk $(depends) > $@
 
 .PHONY: reconfig
 reconfig-args = $(srcdir)/$(CONFIGURE) $(yes_silence:yes=--silent) $(configure_args)
